--- a/app/src/main/res/layout/item_tweet.xml
+++ b/app/src/main/res/layout/item_tweet.xml
@@ -6,10 +6,13 @@
     android:layout_height="wrap_content"
     android:layout_margin="5dp">
 
-    <ImageView
+    <de.hdodenhof.circleimageview.CircleImageView
         android:id="@+id/ivProfileImage"
         android:layout_width="50dp"
-        android:layout_height="50dp "
+        android:layout_height="50dp"
+        android:src="@drawable/img"
+        app:civ_border_color="#16000000"
+        app:civ_border_width="2dp"
         tools:srcCompat="@tools:sample/avatars[0]" />
 
     <TextView
@@ -17,8 +20,8 @@
         android:layout_width="88dp"
         android:layout_height="22dp"
         android:layout_alignParentTop="true"
-        android:layout_marginStart="5dp"
-        android:layout_marginTop="0dp"
+        android:layout_marginStart="18dp"
+        android:layout_marginTop="-1dp"
         android:layout_toEndOf="@+id/ivProfileImage"
         tools:text="rpandey123" />
 
@@ -27,17 +30,18 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_below="@+id/tvScreenName"
-        android:layout_marginStart="5dp"
+        android:layout_marginStart="18dp"
         android:layout_marginTop="2dp"
         android:layout_toEndOf="@+id/ivProfileImage"
         tools:text="This is my Tweet!" />
 
     <TextView
         android:id="@+id/tvUsername"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="180dp"
+        android:layout_width="70dp"
+        android:layout_height="19dp"
+        android:layout_marginStart="176dp"
         android:layout_toEndOf="@+id/tvScreenName"
+        android:textSize="10sp"
         tools:text="Time Stamp" />
 
 </RelativeLayout>
